--- a/Lab06/recipe.css
+++ b/Lab06/recipe.css
@@ -1,82 +1,64 @@
-
-
 .container {
   width: 80%;
-  margin: 0 auto; 
+  margin: 0 auto;
 }
 
 .recipe-images {
-  display: flex; 
-  justify-content: space-between; 
+  display: flex;
+  justify-content: space-between;
 }
 
 a:link {
-  color: blue; 
-  text-decoration: none; 
+  color: blue;
+  text-decoration: none;
 }
 
 a:visited {
-  color: purple; 
+  color: purple;
 }
 
 a:hover {
-  color: red; 
+  color: red;
 }
-
 
 body {
-  background-color: #f0f0f0; 
-  font-family: Arial, sans-serif; 
-  color: #333; 
+  background-color: #f0f0f0;
+  font-family: Arial, sans-serif;
+  color: #333;
 }
-
 
 .recipe-image-top {
   background-image: url('images/Top image.jpg');
   background-size: cover;
 }
 
-
 .recipe-image-bottom {
   background-image: url('images/bottom image.jpg');
   background-size: cover;
 }
 
-
 ul.ingredient-block {
   float: left;
 }
 
-
-ol.ingredient-block {
-  margin: 3; 
- 
-}
-
-
-.clear-float {
-  clear: both;
-}
-
- (max-width: 768px) */
 @media screen and (max-width: 768px) {
   .container {
-    width: 100%; 
+    width: 100%;
   }
 
   .recipe-images {
-    flex-direction: column; 
+    flex-direction: column;
     justify-content: center;
   }
 
-  a:link, a:visited, a:hover {
-    font-size: 16px; 
+  a:link,
+  a:visited,
+  a:hover {
+    font-size: 16px;
   }
 
-  
   body {
-    background-color: #f5f5f5; 
-    font-family: Helvetica, Arial, sans-serif; 
-    color: #444; 
+    background-color: #f5f5f5;
+    font-family: Helvetica, Arial, sans-serif;
+    color: #444;
   }
-}
